--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -79,7 +79,7 @@
 				<app-candidate-info-box [config]="infoItemConfig"></app-candidate-info-box>
 				
 				<div>
-	       			<div class="left-box-container {{mobileListingLeftPaneContainer}}">
+	       			<div class="left-box-containerXXX {{mobileListingLeftPaneContainer}}">
 	       				<h1 *ngIf="isMobile" class="listing-view-title">{{selectedListing.title}}</h1>
 	       				
 	       			</div>
