--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -95,7 +95,7 @@
 	padding-left:4px;
 	padding-right:4px;
 } 
-
+/*
 .suggestion-results{
 	width:96%;
 	margin-bottom:100px;
@@ -105,7 +105,7 @@
 	margin-right:2%;
 	padding-left:2%;
 }
-
+*/
 .suggestion-icon{
 	float:left;
 	background:#E8E8E8;
