--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.css
@@ -1,8 +1,3 @@
-.content-div{
-	margin:10px;
-	margin-left:30px;
-	margin-right:30px;
-}
 
 .recruiter-profile-buttons{
 	border-bottom:1px solid grey;
@@ -205,4 +200,12 @@ textarea {
 	text-align:center;
 	font-weight:bold;
 	margin-top:120px;
+}
+
+.desc-body{
+    float: left;
+    padding: 5px;
+    padding-left: 20px;
+    min-width: 72%;
+    max-width: 72%;
 }
